Changes since version 0.9.1-pre2
- Network bandwidth setting added, this is used in SMIL's <switch> element
  when <video> or <audio> elements have a system-bitrate attribute
- Unpushing the playbutton now actually stops playing
- Fix kxineplayer crashing on exit due to double deletion
- Keep playlist entry in popupmenu, controlpanel button might be gone
- Remember window location so window->fullscreen->window is at same place again
- Option to not resize on opening new source added
- Fix ASX Entry's having more than one Ref child nodes, current wasn't set
  right in playlist (did play though)
Changes since version 0.9.1-pre1
- Playlist button of controlpanel has no use when in fullscreen or minimal
  mode, so reuse if for a back-to-normal-window button
- Fixed bug in plugin, 0.9.1-pre1 only, that messed up all attributes passed
  to KMPlayer from KHTML and likely breaking lots of webpages having
  audio/video and also omitting KMPlayer's checks for local access.
- Shorten intro/exit animations and also animate the icon rise and fall
- SMIL's regPoint/regAlign support
- Don't resize kpart if 'intrinsic' size is 0x0
- Don't resize for intro/exit animations
- XML export, or regenerate in case of XML playlist, of loaded playlist.
- Fix possible crash when changing source from the TV source to another one.
Changes since version 0.9.0c
- Font settings for playlist and infowindow added.
- Color settings for infowindow added.
- Added some docu about intro/exit movies and kmplayer:// urls in handbook.
- Added minimal mode option that hides playlist, status- and menubar and
  autohides the controlpanel.
- Moved playlist option from popupmenu to controlpanel and a configure option
  whether to show this button
Changes since version 0.9.0b
- Fix 1+ movies become black&white with Xine backend playing the playlist
- Fix the 'Remember window size on exit' setting and make the 'Always start
  with fixed size' setting use the last remembered size.