@@ -120,7 +120,7 @@ public:
         Feat_Unknown = 0,
         Feat_Viewer = 0x01, Feat_Controls = 0x02,
         Feat_Label = 0x04, Feat_StatusBar = 0x08,
-        Feat_InfoPanel = 0x10, Feat_VolumeSlider = 0x20,
+        Feat_InfoPanel = 0x10, Feat_VolumeSlider = 0x20, Feat_PlayList = 0x40,
         Feat_All = 0xff
     };
     KMPlayerPart (QWidget * wparent, const char * wname,
