@@ -1,0 +1,25 @@
+<html>
+  <body>
+    <table>
+      <tr>
+        <td COLSPAN=2>
+          <embed SRC="excl_timings.smil" TYPE="application/x-mplayer2" WIDTH=320 HEIGHT=240 CONTROLS=ImageWindow CONSOLE=one AUTOSTART=true></embed>
+        </td>
+        <td>
+          <embed WIDTH=160 HEIGHT=240 TYPE="application/x-mplayer2" CONTROLS=PlayList CONSOLE=one AUTOSTART=true></embed>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <embed WIDTH=160 HEIGHT=16 TYPE="application/x-mplayer2" CONTROLS=PlayButton CONSOLE=one AUTOSTART=true></embed>
+        </td>
+        <td>
+          <embed WIDTH=160 HEIGHT=16 TYPE="application/x-mplayer2" CONTROLS=VolumeSlider CONSOLE=one AUTOSTART=true></embed>
+        </td>
+        <td>
+          <embed WIDTH=160 HEIGHT=55 TYPE="application/x-mplayer2" CONTROLS=InfoPanel CONSOLE=one AUTOSTART=true></embed>
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
